--- a/has-law/package.json
+++ b/has-law/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "reactstrap": "^9.2.1",
+    "video.js": "^8.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
